# simulation-1

./: .gitignore  CMakeLists.txt  How to run.md  ParticleToy.sln  README.md
ParticleToy/: AngularSpringForce.cpp  AngularSpringForce.h  CircularWireConstraint.cpp  CircularWireConstraint.h  ConstraintForce.cpp  ConstraintForce.h  Force.cpp  Force.h  ForwardEuler.cpp  ForwardEuler.h  GravityForce.cpp  GravityForce.h  HorizontalForce.cpp  HorizontalForce.h  LambdaSolver.cpp  LambdaSolver.h  Midpoint.cpp  Midpoint.h  Particle.cpp  Particle.h  ParticleToy.cpp  ParticleToy.vcxproj  ParticleToy.vcxproj.filters  RK4.cpp  RK4.h  ReadMe.txt  RodConstraint.cpp  RodConstraint.h  SetUp.cpp  SetUp.h  SlidingWireConstraint.cpp  SlidingWireConstraint.h  Solver.cpp  SpringForce.cpp  SpringForce.h  WallForce.cpp  WallForce.h  linearSolver.cpp  linearSolver.h  stdafx.cpp
ParticleToy/constraints/: CircularWireConstraint.cpp  CircularWireConstraint.h  LambdaSolver.cpp  LambdaSolver.h  RodConstraint.cpp  RodConstraint.h  SlidingWireConstraint.cpp  SlidingWireConstraint.h
ParticleToy/demo/: SetUp.cpp  SetUp.h
ParticleToy/forces/: AngularSpringForce.cpp  AngularSpringForce.h  ConstraintForce.cpp  ConstraintForce.h  DampForce.cpp  DampForce.h  Force.cpp  Force.h  GravityForce.cpp  GravityForce.h  HorizontalForce.cpp  HorizontalForce.h  SpringForce.cpp  SpringForce.h  WallForce.cpp  WallForce.h
ParticleToy/include/GL/: freeglut.h
ParticleToy/include/arma/armadillo_bits/: config.hpp
ParticleToy/particles/: Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h
ParticleToy/solvers/: ForwardEuler.cpp  ForwardEuler.h  Midpoint.cpp  Midpoint.h  RK4.cpp  RK4.h  Solver.cpp  Solver.h
